@@ -3,6 +3,7 @@
 ==== Ver 1.3.8-dev(2017/xx/xx)
  * NEW: bit.ly の認証方式が変更されました
   - 短縮URLに bit.ly を使用する場合は、設定画面の「短縮URL」から bit.ly の「認可」ボタンを押して認証情報を入力して下さい
+ * FIX: Microsoft DataMarket廃止により翻訳機能が使用できなくなった不具合を修正
 
 ==== Ver 1.3.7(2017/03/20)
  * NEW: PNG画像のアップロード時にJPEGへの変換による劣化を回避する機能を追加しました (pic.twitter.com のみ)
